opam-version: "2.0"
maintainer: "ygrek@autistici.org"
authors: ["ygrek"]
homepage: "http://ygrek.org.ua/p/sqlgg/"
dev-repo: "git+https://github.com/ygrek/sqlgg.git"
bug-reports: "https://github.com/ygrek/sqlgg/issues"
build: [
  [ "ocaml"
    "setup.ml"
    "-configure"
    "--enable-tests"
    "--%{mariadb:enable}%-mariadb"
    "--%{mysql:enable}%-mysql"
    "--%{sqlite3:enable}%-sqlite3"
    "--prefix" prefix
  ]
  ["ocaml" "setup.ml" "-build"]
  ["ocaml" "setup.ml" "-test"] {with-test}
]
install: [
  ["ocaml" "setup.ml" "-install"]
]
remove: [
  ["ocamlfind" "remove" "sqlgg"]
  ["rm" "-f" "%{bin}%/sqlgg" "%{bin}%/sqlgg.exe"]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune"  {build}
  "menhir"
  "base"
  "stdio"
  "ppx_sexp_conv"
  "ppx_compare"
]
synopsis: "SQL Parser"
description: """
Just a SQL parser. Based on sqlgg.
"""
